# clawEASA

./: .gitignore  README.md  config.yaml.example  manifest.json  pyproject.toml
.github/workflows/: ci.yml
docs/: RECONSTRUCTION_HANDOFF_2026-03-21.md  audit-finding-versioning-contract-v1.md  audit-finding-versioning-plan.md  openclaw-install.md  recovery-notes-2026-03-21.md  retrieval-gap-fatigue-occurrence-reporting.md  snippets-investigation-subentry-attribution-gap.md
scripts/: bootstrap-local-runtime.sh  check-openclaw-runtime.sh  install-openclaw-skill.sh
skill/claw-easa/: SKILL.md
skill/claw-easa/references/: runtime-setup.md  usage.md
src/claw_easa/: __init__.py  config.py  specialist.py
src/claw_easa/answering/: __init__.py
src/claw_easa/audit/: __init__.py  export.py  schema.py  storage.py  tools.py
src/claw_easa/cli/: __init__.py  __main__.py
src/claw_easa/db/: __init__.py  migrations.py  schema.sql  sql.py  sqlite.py
src/claw_easa/ingest/: __init__.py  anomalies.py  catalog.py  diagnostics.py  faq_parser.py  faq_service.py  faq_sources.py  http.py  normalize.py  parser.py  repository.py  scraper.py  scraper_browser.py  service.py  sources.py
src/claw_easa/retrieval/: __init__.py  answering.py  chunking.py  embedder.py  (+15 more)
tests/: test_audit_cli.py  test_audit_workflow.py  test_catalog.py  test_ingest_local.py  test_ingest_sqlite.py  test_parser_cs_structured.py  test_retrieval_gap_fix.py  test_retrieval_sqlite.py  test_scraper_challenge.py  test_scraper_helpers.py  test_snippets_subentry.py  test_sqlite_foundation.py  test_zip_extraction.py
